--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,25 @@ author_profile: true
 
 {% include base_path %}
 
+## Teaching Assistant Experience
+
+**Teaching Assistant, International Economics (Graduate)** — with *Professor Sandhyarani Patlolla*  
+_August 2024 – December 2024_
+
+**Teaching Assistant, International Economics (Undergraduate)** — with *Professor Timothy Tung*  
+_August 2024 – December 2024_
+
+**Teaching Assistant, Intermediate Microeconomics (Undergraduate)** — with *Professor Sandhyarani Patlolla*  
+_August 2023 – May 2024_
+
+**Teaching Assistant, Global Inequalities & Social Justice (Undergraduate)** — with *Professor Cecilia Santos*  
+_January 2024 – May 2024_
+
+**Teaching Assistant, Sociology of Law (Undergraduate)** — with *Professor Cecilia Santos*  
+_August 2023 – December 2023_
+
+---
+
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
