--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,22 +7,23 @@ author_profile: true
 
 {% include base_path %}
 
-## Teaching Assistant Experience
+<h2>Teaching Assistant Experience</h2>
 
-**Teaching Assistant, International Economics (Graduate)** — with *Professor Sandhyarani Patlolla*  
-_August 2024 – December 2024_
+<p><strong>Teaching Assistant, International Economics (Graduate)</strong> — with <em>Professor Sandhyarani Patlolla</em><br>
+<em>August 2024 – December 2024</em></p>
 
-**Teaching Assistant, International Economics (Undergraduate)** — with *Professor Timothy Tung*  
-_August 2024 – December 2024_
+<p><strong>Teaching Assistant, International Economics (Undergraduate)</strong> — with <em>Professor Timothy Tung</em><br>
+<em>August 2024 – December 2024</em></p>
 
-**Teaching Assistant, Intermediate Microeconomics (Undergraduate)** — with *Professor Sandhyarani Patlolla*  
-_August 2023 – May 2024_
+<p><strong>Teaching Assistant, Intermediate Microeconomics (Undergraduate)</strong> — with <em>Professor Sandhyarani Patlolla</em><br>
+<em>August 2023 – May 2024</em></p>
 
-**Teaching Assistant, Global Inequalities & Social Justice (Undergraduate)** — with *Professor Cecilia Santos*  
-_January 2024 – May 2024_
+<p><strong>Teaching Assistant, Global Inequalities &amp; Social Justice (Undergraduate)</strong> — with <em>Professor Cecilia Santos</em><br>
+<em>January 2024 – May 2024</em></p>
 
-**Teaching Assistant, Sociology of Law (Undergraduate)** — with *Professor Cecilia Santos*  
-_August 2023 – December 2023_
+<p><strong>Teaching Assistant, Sociology of Law (Undergraduate)</strong> — with <em>Professor Cecilia Santos</em><br>
+<em>August 2023 – December 2023</em></p>
+
 
 ---
 
